--- a/style/style.css
+++ b/style/style.css
@@ -3,51 +3,75 @@
     padding: 0;
 }
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: Roboto;
+}
+main {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 .form {
-    margin: 0 auto;
     width: 481px;
+    height: 392px;
     background: #F7F5F9;
     border-radius: 12px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    margin-top: 31px;
+    padding: 40px;
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.25) 5px 5px 14px;
 }
-.form-title {
+.form__title {
     color:#3B3D43;
     font-weight: bold;
     font-size: 24px;
     line-height: 20px;
     margin-bottom: 25px;
 }
-input {
+.form__input {
     font-size: 15px;
     line-height: 20px;
     height: 48px;
-    width: 401px;
-    color: #D0C9D6;
+    width: 100%;
     background: #FFFFFF;
-    border: 1px solid #FFFFFF;
-    box-shadow: 0px 7px 64px rgba(0, 0, 0, 0.07);
-    border-radius: 6px;
+    border: none;
     padding-left: 15px;
+    padding-right: 35.13px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    border-radius: 6px;
+    outline: 0;
+    outline-offset: 0;
+    box-shadow: 0px 7px 64px rgba(0, 0, 0, 0.07);
+    box-sizing: border-box;
+}
+
+input::placeholder {
+    color: #D0C9D6;
+}
+input:focus  {
+    border: 1px solid #854FC8;
 }
 .form__line {
     margin-bottom: 25px;
 }
 
 .form__button {
-    display: block;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border: none;
     height: 48px;
     background: #6979F8;
     border-radius: 6px;
     color: #FFFFFF;
+    border: 0px;
     text-transform: uppercase;
-}
-
-input:focus {
-    border: 1px solid #854FC8;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 22px;  
+    outline: 0;
+    outline-offset: 0;
+    box-sizing: border-box;
 }
