--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    font-family: Roboto;
+    font-family: "Roboto", "Arial", sans-serif;
 }
 main {
     position: absolute;
@@ -34,38 +34,40 @@ main {
     height: 48px;
     width: 100%;
     background: #FFFFFF;
-    border: none;
-    padding-left: 15px;
-    padding-right: 35.13px;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding: 12px 33px 13px 13px;
     border-radius: 6px;
     outline: 0;
     outline-offset: 0;
     box-shadow: 0px 7px 64px rgba(0, 0, 0, 0.07);
     box-sizing: border-box;
+    border: 1px solid #FFFFFF
 }
 
-input::placeholder {
+.form__input::placeholder {
     color: #D0C9D6;
+    font-size: 15px;
+    line-height: 20px;
 }
-input:focus  {
+.form__input:focus {
+    border: 1px solid #854FC8;
+}
+.form__input:hover {
+    box-shadow: 0 0 0 1px #854FC8;
+}
+.form__button:hover {
     border: 1px solid #854FC8;
 }
 .form__line {
     margin-bottom: 25px;
 }
-
 .form__button {
     display: flex;
     justify-content: center;
     width: 100%;
-    border: none;
     height: 48px;
     background: #6979F8;
     border-radius: 6px;
     color: #FFFFFF;
-    border: 0px;
     text-transform: uppercase;
     font-style: normal;
     font-weight: normal;
@@ -74,4 +76,5 @@ input:focus  {
     outline: 0;
     outline-offset: 0;
     box-sizing: border-box;
+    border: 1px solid #6979F8
 }
